# rust-chess

./: .gitignore  Cargo.toml  README.md
src/: board.rs  helpers.rs  main.rs  moves.rs  pieces.rs  positions.rs  utils.rs
src/bot/: bot_moves.rs  mod.rs
src/gui/: app.rs  mod.rs  utils.rs
