[package]
name = "rust-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe="0.27.2"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
rand = "0.8.5"
chrono = "0.4.38"
fnv = "1.0.7"
